// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for GifGrid component Debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3>
     
    One Punch
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier.cosa.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Cualquier cosa"
      url="https://localhost/cualquier.cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Tests for GifGrid component should show the correct component and match with the snapshot 1`] = `
<Fragment>
  <h3>
     
    One Punch
     
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
